Removed gsap trail

--- a/src/components/Home/Logo/index.scss
+++ b/src/components/Home/Logo/index.scss
@@ -1,5 +1,5 @@
 .logo-container {
-  z-index: 0;
+  // z-index: 0;
   width: auto;
   height: auto;
   position: absolute;
@@ -8,37 +8,37 @@
   bottom: 0;
   left: auto;
   margin: auto;
-  opacity: 0;
+  // opacity: 0;
 
-  svg {
-    width: 50rem;
-    height: auto;
-    top: 5%;
-    bottom: 0;
-    transform: rotateZ(180deg) !important;
-  }
+  // svg {
+  //   width: 50rem;
+  //   height: auto;
+  //   top: 5%;
+  //   bottom: 0;
+  //   transform: rotateZ(180deg) !important;
+  // }
 
   .solid-logo {
-    position: absolute;
-    top: 5%;
-    right: 3%;
-    bottom: auto;
-    left: 0;
-    margin-right: -200px;
+    // position: absolute;
+    // top: 5%;
+    // right: 3%;
+    // bottom: auto;
+    // left: 0;
+    // margin-right: -200px;
     width: 45rem;
-    opacity: 0;
-    // transform: rotateZ(30deg);
-    z-index: 1;
+    // opacity: 0;
+    // // transform: rotateZ(30deg);
+    // z-index: 1;
   }
 }
 
-.svg-container {
-  stroke: orange;
-  stroke-width: 10px;
-  margin-top: 900px;
-  margin-left: -200px;
-  margin-bottom: -100px;
-}
+// .svg-container {
+//   stroke: orange;
+//   stroke-width: 10px;
+//   margin-top: 900px;
+//   margin-left: -200px;
+//   margin-bottom: -100px;
+// }
 
 /* ======================= MEDIA QUERY ======================= */
 @media screen and (max-width: 1024px) {
@@ -48,20 +48,20 @@
     height: auto;
     position: absolute;
     top: 30%;
-    right: 5%;
-    opacity: 0;
+    right: 40%;
+    // opacity: 0;
   
-    svg {
-      width: 25rem;
-      height: auto;
-      transform: rotateZ(180deg) !important;
-    }
+    // svg {
+    //   width: 25rem;
+    //   height: auto;
+    //   transform: rotateZ(180deg) !important;
+    // }
   
     .solid-logo {
       position: absolute;
       transform: rotateZ(0deg);
       z-index: 1;
-      width: 22rem;
+      width: 30rem;
     }
   }
 }
@@ -73,14 +73,14 @@
     height: auto;
     position: absolute;
     top: 30%;
-    right: 1%;
-    opacity: 0;
+    right: 32%;
+    // opacity: 0;
   
-    svg {
-      width: 16rem;
-      height: auto;
-      transform: rotateZ(180deg) !important;
-    }
+    // svg {
+    //   width: 16rem;
+    //   height: auto;
+    //   transform: rotateZ(180deg) !important;
+    // }
   
     .solid-logo {
       position: absolute;
